# AgenticAlmostColorings

./: .cursorignore  .gitignore  README.md  main.py  models.py  problems.py  pyproject.toml  requirements.txt  run_pipeline.py  runner.py  utilities.py
.pi/scripts/: batched_neural_workflow.py  parallelogram_grid_search.py
.pi/workflows/: batched-neural-repair-verification-loop.json  (+3 more)
constructions/: README.md
scripts/: plot_fixed_coloring.py  run_cpu_baseline_bg.sh  summarize_training_sweep.py  train_batched_ensemble.py  verify_agent2_direct_fill_candidate.py  verify_paralellogram.py  verify_paralellogram_equal.py  verify_paralellogram_ip.py  verify_paralellogram_ip_rect.py  verify_paralellogram_old.py  verify_parallelogram_3d.py  verify_parallelogram_3d_speedup.py  verify_parallelogram_heuristic.py
slurm/: batched32_hparam_1247042_top10.csv  run_batched_neural_repair_verification_loop.sbatch  run_papers_concept_exploration_loop.sbatch  run_parallelogram_coarse_grid_loop.sbatch  run_pipeline_baseline.sbatch  top_rect_2048_candidates.csv  train_batched_ensemble.sbatch  train_batched_ensemble_best128.sbatch  train_fast_array.sbatch  verify_2048_cbc_8core.sbatch  verify_2048_cbc_gap_array.sbatch  verify_4096_cbc_gap.sbatch  verify_4096_heuristic.sbatch  verify_4096_heuristic_mis.sbatch  verify_4096_heuristic_mis_kick.sbatch  verify_4096_scip_gap_log.sbatch  verify_agent2_direct_fill_candidate.sbatch  verify_best128_2048_cbc_array.sbatch  verify_candidates_array.sbatch  verify_cpsat_1024_32core.sbatch  verify_top_rect_2048_cbc_array.sbatch
(+29 files in other folders)
